<resources>
    <string name="app_name">SecretSantaSMS</string>
    <string name="action_add">add</string>
    <string name="action_update">update</string>
    <string name="action_delete">delete</string>

    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>

    <string name="main_dialog_title">Send results?</string>
    <string name="main_dialog_message">Do you want to send a SMS to each Secret Santa? (See usage charges from your service provider)</string>
    <string name="main_dialog_bySMSButton">SMS</string>
    <string name="main_dialog_success_title">Success</string>
    <string name="main_dialog_success_message">The secret santa was sent</string>
    <string name="main_dialog_fail_title">Fail</string>
    <string name="main_dialog_fail_message">There is no solution, please change the "Don't gift to" rules</string>
    <string name="edit_view_title">Person</string>
    <string name="edit_created">Inserted!</string>
    <string name="edit_deleted">Deleted!</string>
    <string name="edit_edited">Edited!</string>
    <string name="edit_validation_chips">This person cannot gift anyone</string>
    <string name="edit_validation_field_requited">is required</string>
    <string name="edit_validation_name">Name already exist</string>
    <string name="edit_validation_phone">Invalid phone number</string>

    <string name="main_dialog_smsTemplate">Hi %1$s! You are the secret santa of: %2$s</string>
    <string name="main_dialog_sms_plus_maxPrice">.Price limit %1$s</string>
    <string name="main_dialog_validation_error">Error</string>

    <string name="edit_activity_hint_name">Name</string>
    <string name="edit_activity_hint_phone">Phone</string>
    <string name="edit_activity_hint_email">Email</string>
    <string name="edit_dialog_deleted_person">Do you want to delete %1$s</string>
    <string name="edit_dialog_deleted_group">Do you want to delete %1$s group and all his members?</string>

    <string name="main_dialog_fail_number_of_candidates">%1$s cannot gift anyone</string>
    <string name="main_dialog_fail_only_two_candidates">There is less than two persons in the group</string>

    <string name="edit_activity_hint_dontgiftto">Dont gift to:</string>
    <string name="edit_activity_hint_maxprice">Price limit</string>
    <string name="edit_group_title">Group</string>
    <string name="edit_validation_emojis">No emojis allowed</string>

    <string name="resend_dialog_text">Do you want to send again Secret Santa to %1$s?</string>

    <string name="sms_dialog_ok_delivered">Message sent successfully to phone %1$s of %2$s</string>
    <string name="sms_dialog_error_delivered">Message cannot be sent to phone %1$s of %2$s</string>

</resources>
