<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_edittext_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/edit_activity_hint_name"
            android:inputType="textPersonName"
            android:maxLength="50" />

        <ImageView
            android:id="@+id/edit_search_button"
            android:layout_width="60dp"
            android:layout_height="60dp"

            android:clickable="true"
            android:onClick="loadContactList"
            android:src="@android:drawable/ic_menu_search" />

    </LinearLayout>

    <EditText
        android:id="@+id/edit_edittext_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10"
        android:ems="10"
        android:hint="@string/edit_activity_hint_phone"
        android:inputType="phone" />

    <EditText
        android:id="@+id/edit_edittext_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10"
        android:ems="10"
        android:hint="@string/edit_activity_hint_email"
        android:inputType="textEmailAddress" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10"
        android:layout_weight="1"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_edittext_chips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:ems="10"
            android:focusable="true"
            android:hint="@string/edit_activity_hint_dontgiftto"
            android:inputType="textPersonName" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/tag_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>