<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10"
        android:orientation="horizontal">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_errorlayout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_edittext_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/edit_activity_hint_name"
                android:inputType="textPersonName"
                android:maxLength="40"
                android:textColor="@color/colorTextBlack" />
        </com.google.android.material.textfield.TextInputLayout>



        <ImageView
            android:id="@+id/edit_search_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:clickable="true"
            android:onClick="loadContactList"
            android:src="@android:drawable/ic_menu_search" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_errorlayout_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_edittext_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_10"
            android:ems="10"
            android:hint="@string/edit_activity_hint_phone"
            android:inputType="phone"
            android:textColor="@color/colorTextBlack" />
    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10"
        android:layout_weight="1"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_errorlayout_chips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_edittext_chips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:ems="10"
                android:enabled="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/edit_activity_hint_dontgiftto"
                android:inputType="textPersonName" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/tag_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

</LinearLayout>